ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ressellr
  namespace: egs-ressellr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app-ressellr.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
      - path: /messages
        pathType: Prefix
        backend:
          service:
            name: messages-service
            port: 
              number: 80
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port: 
              number: 80
      - path: /stock
        pathType: Prefix
        backend:
          service:
            name: stock-service
            port: 
              number: 80
  - host: googleauth.duckdns.org
    http:
      paths:
      - path: /authorize
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port: 
              number: 80
